--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: DopeTrope
 description: DopeTrope template for Jekyll
 paginate: 10
-baseurl: '/html-blog-Theme'
+baseurl: '/jekyll-blog-theme'
